--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.8.3",
     "@types/react": "^18.2.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,5 +36,8 @@
     "dist",
     "LICENSE",
     "README.md"
-  ]
+  ],
+  "dependencies": {
+    "dotenv": "^16.3.1"
+  }
 }
